<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

        <TextView
                android:id="@+id/item_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_default"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="22sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteY="8dp" tools:layout_editor_absoluteX="8dp"/>
        <TextView
                android:id="@+id/item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description_default"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toBottomOf="@id/item_name"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/item_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_positive"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toTopOf="@id/item_name"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/item_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/priority_high"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/item_type"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/item_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/times_default"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/item_description"
                app:layout_constraintStart_toStartOf="@id/item_description"
                android:textSize="16sp"/>
        <TextView
                android:id="@+id/item_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period_default"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/item_times"
                app:layout_constraintStart_toStartOf="@id/item_times"
                android:textSize="16sp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>