<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:paddingBottom="32dp"
        android:id="@+id/bottomSheet"
        app:behavior_peekHeight="30dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/filter_title"
              android:textSize="18sp"
              android:id="@+id/filter_title"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/filter_priority"
              android:layout_marginTop="10dp"
              android:textSize="18sp"
              android:id="@+id/filter_priority_title"
              app:layout_constraintTop_toBottomOf="@id/filter_title"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <CheckBox
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/priority_high"
            android:id="@+id/filter_priority_checkbox_high"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/filter_priority_title"
            app:layout_constraintEnd_toStartOf="@id/filter_priority_checkbox_medium"
    />

    <CheckBox
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/priority_medium"
            android:id="@+id/filter_priority_checkbox_medium"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/filter_priority_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />

    <CheckBox
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/priority_low"
            android:id="@+id/filter_priority_checkbox_low"
            android:checked="true"
            app:layout_constraintTop_toBottomOf="@id/filter_priority_title"
            app:layout_constraintStart_toEndOf="@id/filter_priority_checkbox_medium"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/filter_name_title"
            android:text="@string/filter_name"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/filter_priority_checkbox_low"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/filter_name_field"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="40dp"
            app:layout_constraintTop_toBottomOf="@id/filter_priority_checkbox_low"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>